# agentarmorstudio

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
sidecar/: .env  agentarmor_sidecar.spec  d1_evidence.json  d4_evidence.json  l1_tools.py  l2_results.txt  main.py  out.txt  requirements.txt  seed_tavily.py  studio_db.py  test_l1_missing.py  test_l2_validation.py  test_l3_validation.py  test_l4_output.txt  test_l4_validation.py  test_l5_validation.py  test_l6_validation.py  test_l7_validation.py  workspace.py
sidecar/builder/: generator.py  runner.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EventFeed.tsx  LayerStatusGrid.tsx  SecurityScoreRing.tsx  SidecarCrashBanner.tsx  UpdateNotification.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  sheet.tsx
src/lib/: api.ts  generateSnippet.ts
src/pages/: AgentRunner.tsx  Builder.tsx  Dashboard.tsx  Events.tsx  IntegrationWizard.tsx  Layers.tsx  Settings.tsx
