[package]
name = "agentarmor-studio"
version = "0.1.0"
description = "AgentArmor Studio — Desktop security dashboard for agentic AI"
authors = ["Agastya Todi"]
edition = "2021"

[lib]
name = "agentarmor_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
